--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -115,7 +115,7 @@ a{
     align-items: flex-start;
     -ms-flex-positive: 0;
     flex-grow: 0;
-    padding: 30px 30px 0 500px;
+    padding: 30px 30px 0 550px;
 }
 
 .form-link a{
@@ -123,26 +123,36 @@ a{
 }
 
 .container{
-    padding: 7% 30% 0 20%;
+    padding: 5% 30% 0 20%;
     margin: 0;
 }
 
 .signup_btn a{
     text-decoration: none;
+    font-family: 'Catamaran', sans-serif;
+    font-weight: 600;
+}
+
+.signup_btn span.btn_text{
+    margin-left: 2rem;
+    background-color: #4384f5;
+    color: white;
+    padding: 10px 40px;
 }
 
 .fa-google{    
     background-color: #4384f5;
     color: white;
-    padding: 2%;
+    padding: 3%;
     margin-top: 5%;
-    border-radius: 7%;
+    border-radius: 6%;
 }
 
 .fa-twitter{
     background-color: lightgrey;
     color: #767676;
-    padding: 2%;
+    margin-left: 0.5rem;
+    padding: 3%;
     margin-top: 5%;
     border-radius: 15%;
 }
@@ -150,7 +160,79 @@ a{
 .fa-facebook-square{
     color: #767676;
     background-color: lightgrey;
-    padding: 2%;
+    margin-left: 0.5rem;
+    padding: 3%;
     margin-top: 5%;
     border-radius: 15%;
+}
+
+hr.divider {
+    overflow: visible;
+    margin-top: 30px;
+    border: none;
+    border-top: 1px solid #e0e0e0;
+    color: #757575;
+    text-align: center;
+}
+
+hr.divider:after {
+    content: "Or";
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    font: normal 14px Arial, sans-serif;
+    padding: 0 16px;
+    background: white;
+}
+
+.details_form label{
+    font-weight: bold;
+}
+
+#fullname{
+    float: left;
+    width: 50%;
+}
+
+#username{
+    float: right;
+    width: 50%;
+}
+
+input{
+    margin-bottom: 4%;
+}
+
+#fullname input{
+    width: 90%;
+}
+
+#username input{
+    width: 100%;
+}
+
+#email_id input{ 
+    width:100%;
+}
+
+#pswd input{ 
+    width:100%;
+}
+
+#terms_condtns{ 
+    margin-bottom: 3%;
+}
+
+#terms_condtns a{
+    color: #0c95d4;
+    text-decoration: none;
+    line-height: normal;
+}
+
+.button{
+    background-color: #ea4c88;
+    padding: 2% 15%;;
+    border: none;
+    border-radius: 8%;
+    color: white;
 }
