--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -145,7 +145,7 @@ a{
     color: white;
     padding: 3%;
     margin-top: 5%;
-    border-radius: 6%;
+    border-radius: 6px;
 }
 
 .fa-twitter{
@@ -201,6 +201,11 @@ hr.divider:after {
 
 input{
     margin-bottom: 4%;
+    border-radius: 5px;
+    height: 30px;
+    box-shadow: none;
+    background-color: #ece9e9;
+    border: hidden;
 }
 
 #fullname input{
@@ -223,16 +228,19 @@ input{
     margin-bottom: 3%;
 }
 
+#terms_condtns label{
+    line-height: normal;
+}
+
 #terms_condtns a{
     color: #0c95d4;
     text-decoration: none;
-    line-height: normal;
 }
 
 .button{
     background-color: #ea4c88;
     padding: 2% 15%;;
     border: none;
-    border-radius: 8%;
+    border-radius: 6px;
     color: white;
 }
