--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -185,21 +185,17 @@ hr.divider:after {
     background: white;
 }
 
+.details_form{
+    display: grid;
+    grid-template-columns: 14rem auto;
+}
+
 .details_form label{
     font-weight: bold;
 }
 
-#fullname{
-    float: left;
-    width: 50%;
-}
-
-#username{
-    float: right;
-    width: 50%;
-}
-
 input{
+    display: grid;
     margin-bottom: 4%;
     border-radius: 5px;
     height: 30px;
@@ -212,24 +208,29 @@ input{
     width: 90%;
 }
 
-#username input{
-    width: 100%;
+#email_id,
+#email_id input {
+    display: grid; 
+    width:100%;
+    grid-column: span 2;
 }
 
-#email_id input{ 
+#pswd,
+#pswd input {
+    display: grid; 
     width:100%;
-}
-
-#pswd input{ 
-    width:100%;
+    grid-column: span 2;
 }
 
 #terms_condtns{ 
-    margin-bottom: 3%;
+    display: grid;
 }
 
 #terms_condtns label{
-    line-height: normal;
+    display: grid;
+    grid-column: span 2;
+    font-weight: normal;    
+    font-size: 15px;
 }
 
 #terms_condtns a{
@@ -237,9 +238,13 @@ input{
     text-decoration: none;
 }
 
+.sign_up_btn{
+    display: grid;
+}
+
 .button{
     background-color: #ea4c88;
-    padding: 2% 15%;;
+    padding: 10px 35px 25px 30px;
     border: none;
     border-radius: 6px;
     color: white;
