--- a/advanceStyleSheet.css
+++ b/advanceStyleSheet.css
@@ -116,7 +116,7 @@ a {
   font-weight: 600; }
 
 .signup_btn span.btn_text {
-  margin-left: 2rem;
+  margin-left: 1rem;
   background-color: #4384f5;
   color: white;
   padding: 10px 40px; }
@@ -163,22 +163,26 @@ hr.divider:after {
 
 .details_form {
   display: grid;
-  grid-template-columns: 14rem auto; }
+  grid-template-columns: 14rem auto;
+  grid-row-gap: 1rem; }
 
 .details_form label {
   font-weight: bold; }
 
 input {
   display: grid;
-  margin-bottom: 4%;
   border-radius: 5px;
   height: 30px;
   box-shadow: none;
   background-color: #ece9e9;
   border: hidden; }
 
+input[type="checkbox"] {
+  height: 20px;
+  margin-right: 8px; }
+
 #fullname input {
-  width: 90%; }
+  width: 95%; }
 
 #username input {
   width: 100%; }
@@ -196,26 +200,29 @@ input {
   grid-column: span 2; }
 
 #terms_condtns {
-  display: grid; }
+  display: flex;
+  padding-right: 0;
+  margin-bottom: 3%;
+  margin-top: 0.94rem; }
 
 #terms_condtns label {
-  display: grid;
-  grid-column: span 2;
+  display: inline;
   font-weight: normal;
-  font-size: 15px; }
+  font-size: 15px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
 
 #terms_condtns a {
   color: #0c95d4;
   text-decoration: none; }
 
-.sign_up_btn {
-  display: grid; }
-
 .button {
+  width: 100%;
+  text-align: center;
   background-color: #ea4c88;
-  padding: 10px 35px 25px 30px;
-  border: none;
+  padding: 10px 35px 28px 30px;
   border-radius: 6px;
-  color: white; }
+  color: white;
+  max-width: 200px; }
 
 /*# sourceMappingURL=advanceStyleSheet.css.map */
