--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -197,7 +197,6 @@ hr.divider:after {
 
 input{
     display: grid;
-    // margin-bottom: 4%;
     border-radius: 5px;
     height: 30px;
     box-shadow: none;
@@ -245,7 +244,6 @@ input[type="checkbox"]{
     font-size: 15px;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    // width: 98%;
 }
 
 #terms_condtns a{
@@ -261,4 +259,24 @@ input[type="checkbox"]{
     border-radius: 6px;
     color: white;
     max-width: 200px;
+}
+
+@media(max-width: 85.4rem) and (min-width: 64rem) {
+    .form-link{
+        float: right;
+        padding: 10% 20% 0 35%;
+    }
+
+    .signup_btn span.btn_text{
+        margin-left: 0.5rem;
+        padding: 0;
+    }
+
+    .fa-twitter{
+        margin-left: 0.2rem;
+    }
+
+    .fa-facebook-square{
+        margin-left: 0.2rem;
+    }
 }
