--- a/advanceStyleSheet.css
+++ b/advanceStyleSheet.css
@@ -238,6 +238,9 @@ input[type="checkbox"] {
     margin-left: 0.2rem; }
 
   .fa-facebook-square {
-    margin-left: 0.2rem; } }
+    margin-left: 0.2rem; }
+
+  .sidebar1 {
+    width: 40%; } }
 
 /*# sourceMappingURL=advanceStyleSheet.css.map */
