--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -279,4 +279,8 @@ input[type="checkbox"]{
     .fa-facebook-square{
         margin-left: 0.2rem;
     }
+
+    .sidebar1{
+        width: 40%;
+    }
 }
