--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -123,7 +123,7 @@ a{
 }
 
 .container{
-    padding: 5% 30% 0 20%;
+    padding: 5% 20% 0 20%;
     margin: 0;
 }
 
@@ -137,7 +137,7 @@ a{
     margin-left: 1rem;
     background-color: #4384f5;
     color: white;
-    padding: 10px 40px;
+    padding: 0.6rem 6.5rem;
 }
 
 .fa-google{    
@@ -187,7 +187,7 @@ hr.divider:after {
 
 .details_form{
     display: grid;
-    grid-template-columns: 14rem auto;
+    grid-template-columns: 12rem auto;
     grid-row-gap: 1rem;
 }
 
@@ -283,4 +283,17 @@ input[type="checkbox"]{
     .sidebar1{
         width: 40%;
     }
+
+    .sidebar1 header{
+        padding: 0 auto;
+    }
+
+    .image{
+        width: 70%;
+    }
+
+    .signup_btn span.btn_text{
+        padding: 0;
+    }
+
 }
