--- a/advanceStyleSheet.css
+++ b/advanceStyleSheet.css
@@ -104,7 +104,7 @@ a {
   padding: 30px 30px 0 550px; }
 
 .form-link a {
-  color: blue; }
+  color: #0c95d4; }
 
 .container {
   padding: 5% 20% 0 20%;
