--- a/advanceStyleSheet.css
+++ b/advanceStyleSheet.css
@@ -104,7 +104,8 @@ a {
   padding: 30px 30px 0 550px; }
 
 .form-link a {
-  color: #0c95d4; }
+  color: #0c95d4;
+  text-decoration: none; }
 
 .container {
   padding: 5% 20% 0 20%;
@@ -235,10 +236,10 @@ input[type="checkbox"] {
     padding: 0; }
 
   .fa-twitter {
-    margin-left: 0.2rem; }
+    margin-left: 0.1rem; }
 
   .fa-facebook-square {
-    margin-left: 0.2rem; }
+    margin-left: 0.1rem; }
 
   .sidebar1 {
     width: 40%; }
@@ -247,9 +248,6 @@ input[type="checkbox"] {
     padding: 5% 7% 0 7%; }
 
   .image {
-    width: 70%; }
-
-  .signup_btn span.btn_text {
-    padding: 0; } }
+    width: 70%; } }
 
 /*# sourceMappingURL=advanceStyleSheet.css.map */
