--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -293,3 +293,10 @@ input[type="checkbox"]{
         width: 70%;
     }
 }
+
+@media(max-width: 90rem){
+    .signup_btn span.btn_text{
+        margin-left: 0.1rem;
+        padding: 0;
+    }
+}
