--- a/advancestyleSheet.scss
+++ b/advancestyleSheet.scss
@@ -135,10 +135,9 @@ a{
 }
 
 .signup_btn span.btn_text{
-    margin-left: 1rem;
     background-color: #4384f5;
     color: white;
-    padding: 0.6rem 6.5rem;
+    padding-left: 1rem;
 }
 
 .fa-google{    
